# Agente-RAG-AluraChallenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-local.txt  requirements.txt
.github/workflows/: deploy-ocir.yml  deploy.yml
chroma_db/: chroma.sqlite3
data/documents/comercial/: comparativa_planes.csv  planes_y_precios.xlsx
data/documents/datos/: integraciones_api.json
data/documents/legal/: terminos_de_uso.docx
data/documents/producto/: base_conocimiento.md  onboarding_producto.pptx
data/documents/soporte/: faq_soporte.html
docs/: 01-colecta-y-organizacion.md  02-proceso-y-extraccion.md  03-indexacion.md  04-recuperacion.md  05-generacion.md  06-interfaz-y-mantenimiento.md  07-deploy-oci.md  08-registro-ejecucion.md
src/rag/: __init__.py  answering.py  cache.py  chroma_indexer.py  chunking.py  cleaning.py  cli.py  config.py  embeddings.py  generation.py  indexer.py  ingest.py  manifest.py  metadata.py  models.py  observability.py  reranking.py  retrieval.py
src/rag/extractors/: __init__.py  base.py  csv_ext.py  docx.py  html.py  json_ext.py  markdown.py  pdf.py  pptx.py  registry.py  xlsx.py
src/rag/sources/: __init__.py  base.py  local.py  url.py
src/rag/web/: __init__.py  app.py
src/rag/web/static/: app.js  index.html  panel.html  styles.css
tests/: test_cache.py  test_web.py
