[project]
name = "agente-rag"
version = "0.4.0"
description = "Techie — asistente RAG de TechNova (Challenge AluraAgente ONE IA FOR TECH)"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
